[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aisecintel-supply-chain-scanner"
version = "0.1.0"
description = "LLM03 supply-chain scanner for Python requirements.txt files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pip-audit>=2.7.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
supply-chain-scan = "supply_chain_scanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
